# zukuagent

./: .dockerignore  .env.example  .env.lightrag.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  GEMINI.md  IDENTITY.md  README.md  SOUL.md  USER.md  docker-compose.langfuse.yml  docker-compose.openlit.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/zukuagent/: __init__.py  agent.py  audio_service.py  heartbeat.py  pairing.py  settings.py  telegram_endpoint.py
src/zukuagent/core/: __init__.py  agent.py  cron_service.py  heartbeat.py  pairing.py  settings.py  storage.py
src/zukuagent/endpoints/: __init__.py  telegram.py
src/zukuagent/services/: __init__.py  audio_service.py  sandbox_service.py  tracing.py
tests/: conftest.py  test_agent.py  test_agent_tools.py  test_audio_service.py  test_cli_entrypoint.py  test_cron_service.py  test_heartbeat.py  test_pairing.py  test_sandbox.py  test_settings.py  test_telegram_endpoint.py
