[project]
name = "zukuagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marc Fabian Mezger", email = "57255687+mfmezger@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.33.0",
    "langfuse>=3.5.0",
    "loguru>=0.7.3",
    "onnx-asr[cpu,hub]>=0.10.2",
    "openai>=2.24.0",
    "python-telegram-bot>=22.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]

[project.scripts]
zukuagent = "zukuagent:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--record-mode=once"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "dirty-equals>=0.11",
    "inline-snapshot>=0.32.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
]
